# table_generator_skill

./: .gitignore  README.md  cli.py  plan.md  pyproject.toml
example/: results.json
golden_example/: input.json  output.md  output.txt  table_spec.json
skills/table-generator/: SKILL.md
skills/table-generator/agents/: openai.yaml
skills/table-generator/references/: spec_reference.md
skills/table-generator/resources/: latex_preamble.md  records_example.json  spec_template.json
table_generator/: README.md  __init__.py  api.py  cli.py  export.py  pipeline.py  render_html.py  render_latex.py  render_markdown.py  schema.py  stats.py  templates.py
table_generator/docs/: api.md  cli.md  examples.md  spec.md
