[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "table_generator"
version = "0.1.0"
description = "Local, deterministic table generation for ML papers"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
tablegen = "table_generator.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["table_generator"]
